# itmo-docker-task-5

./: .env  Dockerfile  README.md  docker-compose.yml
.github/workflows/: pylint.yml
app/: main.py  pyproject.toml  test_main.py
